k8s/minikube_python_k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-world-api
  name: hello-world-api
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world-api
  type: LoadBalancer

status:
  loadBalancer: {}
