k8s/minikube_python_k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: hello-world-api
spec:
  rules:
  - host: hello-world-api.com
    http:
      paths:
      - backend:
          service:
            name: hello-world-api
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
